Beta Fix - door name visibility

--- a/abovevtt.css
+++ b/abovevtt.css
@@ -2105,7 +2105,9 @@ padding-bottom: 5px;
     transform: none;
 }
 .labelToken.notVisible.hasTooltip:after,
-.labelToken.notVisible.hasTooltip:hover:after{
+.labelToken.notVisible.hasTooltip:hover:after,
+.door-button.notVisible[data-name]::after,
+.door-button.notVisible[data-name]:hover::after {
     visibility: hidden;
 }
 #token_map_items .labelToken.hasTooltip:after, 
